# offgrid_solar_dt_research

./: .gitignore  PROJECT_AUDIT_REPORT.md  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml  secrets.template.toml
docs/: APP_PURPOSE_AND_ACHIEVEMENTS.md  CODEBASE_AUDIT_DATA_SOURCES.md  FEASIBILITY_HISTORICAL_GHI_PROFILE.md  IMPLEMENTATION_PLAN_HISTORICAL_GHI.md  INTERFACE_MANUSCRIPT_ALIGNMENT.md  OVERHAUL_ALIGNMENT_AUDIT.md  PROJECT_DOCUMENTATION.md  TROUBLESHOOTING_NASA_POWER_GHI.md
logs_smoke2/run_forecast_heuristic/: forecast_heuristic_2d_guidance.jsonl  forecast_heuristic_2d_state.csv
logs_smoke2/run_naive/: naive_2d_guidance.jsonl  naive_2d_state.csv
logs_smoke2/run_rule_based/: rule_based_2d_guidance.jsonl  rule_based_2d_state.csv
logs_smoke2/run_static_priority/: static_priority_2d_guidance.jsonl  static_priority_2d_state.csv
logs_verify/run_forecast_heuristic/: forecast_heuristic_2d_guidance.jsonl  forecast_heuristic_2d_state.csv
logs_verify/run_naive/: naive_2d_guidance.jsonl  naive_2d_state.csv
logs_verify/run_rule_based/: rule_based_2d_guidance.jsonl  rule_based_2d_state.csv
logs_verify/run_static_priority/: static_priority_2d_guidance.jsonl  static_priority_2d_state.csv
scripts/: run_simulation.py  validate_ukdale.py
src/offgrid_dt/control/: controllers.py
src/offgrid_dt/data/: ukdale_loader.py
src/offgrid_dt/dt/: load.py  (+2 more)
streamlit_app/: app.py
tests/: conftest.py  test_battery.py  test_forecast_resolution.py  test_load_planned_energy.py  test_nasa_power_parse.py  test_nominal_plan.py  test_simulation_smoke.py
(+14 files in other folders)
