[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "offgrid-solar-dt"
version = "0.1.0"
description = "Digital twin + decision support for solar-first off-grid household energy management."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Adewale Ogabi", email = "hello@adewaleogabi.info"}]

dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "requests>=2.31",
  "python-dateutil>=2.9",
  "tenacity>=8.2",
  "plotly>=5.18",
  "reportlab>=4.0",
]

[project.optional-dependencies]
ui = ["streamlit>=1.31"]
llm = ["openai>=1.10.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
